--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -17,6 +17,9 @@ ul {
 section {
   background: #eff2f9;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items:center;
 }
 
 .card {
@@ -25,24 +28,48 @@ section {
   background: #fff;
   box-shadow: 20px 20px 40px 0 rgba(81, 91, 117, 0.25);
   padding: 60px 0 70px;
+  display: flex;
 }
 
 .product-image-block {
   border-right: 2px solid rgba(20, 20, 20, 0.15);
-  width: 540px;
+  min-width: 540px;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-image-wrapper {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+}
+
+.previews-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
 }
 
 .preview {
   width: 80px;
   height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.2s;
 }
 
+.preview:hover,
 .preview.selected {
-  box-shadow: 8px 8px 16px 0 rgba(81, 91, 117, 0.25);
+  box-shadow: 8px 8px 16px 0px rgba(81, 91, 117, 0.25);
 }
 
 .product-info-block {
   padding: 0 60px;
+  display: flex;
+  flex-direction: column;
 }
 
 .main-title {
@@ -85,6 +112,12 @@ section {
   margin-bottom: 20px;
 }
 
+.color-items {
+  display: flex;
+  align-items: center;
+  gap: 40px; 
+}
+
 .circle {
   width: 16px;
   height: 16px;
@@ -108,27 +141,40 @@ section {
   background-color: #F2C723;
 }
 
-li.selected {
+.color-items > li {
   width: 30px;
   height: 30px;
   padding: 7px;
-  box-shadow: 2px 2px 6px 0px rgba(81, 91, 117, 0.25);
   border-radius: 50%;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.color-items > li:hover,
+.color-items > li.selected {
+    box-shadow: 2px 2px 6px 0px rgba(81, 91, 117, 0.25);
+}
+
+.wrapper {
+  display: flex;
+}
+
+.wrapper > div {
+  flex-grow: 1;
 }
 
 .quantity {
+  font-family: inherit;
   width: 80px;
-
   font-size: 20px;
   font-weight: 500;
   color: rgba(20, 20, 20, 0.8);
-
   border: none;
   appearance: none;
-
-  background-image: url("./assets/images/arrow-bottom.svg");
+  background-image: url("./assets/img/arrow-down.svg");
   background-repeat: no-repeat;
   background-position: right 0 top 50%;
+  cursor: pointer;
 }
 
 .price {
@@ -143,11 +189,15 @@ li.selected {
   height: 70px;
   width: 100%;
   background: #141414;
-
   color: #FFF;
   font-size: 18px;
   font-weight: 500;
   letter-spacing: 0.18px;
-
   margin-top: 75px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.btn:hover {
+  transform: translateY(-5px);
 }
